# rust-raft

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: CI.yml
docs/: raft-state.md
example/: node.rs
examples/: rust-raft.rs
examples/database/: mod.rs
src/: config.rs  configuration.rs  election.rs  error.rs  executor.rs  fsm.rs  grpc_transport.rs  lib.rs  log.rs  main.rs  node.rs  rpc_message.rs  signals.rs  stable.rs  state.rs  storage.rs  utils.rs
src/datastore/: mod.rs  sled_kv.rs  sled_store.rs
src/disk/: mod.rs
src/mocks/: log_store.rs  mod.rs
src/proto/: raft.proto
